		- before the conversion from CSV in VocabCreator
		- when trying to create an ontology from an external ontology file 
		
	- Util renamed to QueryUtil
	
	- XmlBaseExtractor: removed a strange ``throw new SAXException("No xml:base")'' in the original code;
	  this exception was thrown even when an xml:base element has already been found!
	  

2009-06-05
	- several adjustments as the main operations are completed
	- removed several interim dependencies
	- some renamings of types and operations
	- support for registering an uploaded file completed

2009-06-04
	- Implemented the "loading" of local file into working space. This is capture in a TempOntologyInfo.
	  (note the uploading operation is still implemented in the ontmd module).
	- Other preparations for registration of an "other" ontology (not vine, nor voc2rdf).
	
	
2009-06-03
	- Instead of using CreateOntologyInfo as a base class for the various types of ontologies to be
	  created (currently only "vocabulary", but later "mapping" and "regular externally given ontology"),
	  it now contains a DataCreationInfo member. This DataCreationInfo will serve as the basis for extension
	  fot the various types of ontologies.
	  
	- fixed issue #140: "ontologies with no declared namespace for empty prefix are not accepted"
	  If default namespace is not defined, try using xml:base's URI. TODO: test!
	  
	  
2009-06-02
	- getAllOntologies(boolean includePriorVersions) and getOntologyInfo(String ontologyUri) complemented
	  with auxiliary Map<String, List<OntologyInfo>> getUnversionedToOntologyInfoListMap(String onlyThisUnversionedUri).
	- In particular,
		- getOntologyInfo(String ontologyUri) now handles versioned and unversioned URI requests.
		- getAllOntologies(boolean includePriorVersions): main entries in the returned list at UNversioned;
		  the sublist of priorVersions are in versioned form *including* the most recent.